--- a/cafeteras.html
+++ b/cafeteras.html
@@ -37,7 +37,7 @@
           <img src="imagenes/Italiana.jpg" width="150px" ; height="150px" ;>
           <li>Italiana</li>
           <img src="imagenes/kemex.jpg" width="150px" ; height="200px" ;>
-          <li>Kemex</li>
+          <li>Chemex</li>
           <img src="imagenes/aeropress.jpeg" width="150px" ; height="200px" ;>
           <li>Aeropress</li>
           <img src="imagenes/prensa_francesa.jpg" width="150px" ; height="150px" ;>
